Updated on delete api, added tests and dockerfile update